--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,11 @@ spring.datasource.password=
 
 
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+spring.data.jpa.repositories.enabled=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jackson.serialization.fail-on-empty-beans=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+
 
