--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Calendrify?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/Calendrify?useSSL=false&rewriteBatchedStatement=true
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -10,5 +10,13 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.batch_versioned_data=true
+
+
+
 
 
