--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/Calendrify?useSSL=false&rewrit
 spring.datasource.username=root
 spring.datasource.password=
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=calendrify.go@gmail.com
+spring.mail.password=wqeomfitsseshkvq
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
