--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Calendrify?useSSL=false&rewriteBatchedStatement=true
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://calendrifydb.c4uhqhhh97ul.eu-west-1.rds.amazonaws.com/calendrify?useSSL=false&rewriteBatchedStatement=true
+spring.datasource.username=saurav
+spring.datasource.password=Calendrify223
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
