--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,14 @@ spring.mail.password=wqeomfitsseshkvq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+server.ssl.enabled=true
+
+server.ssl.key-store=classpath:springboots.jks
+server.ssl.key-store-password=divyawani
+server.ssl.key-store-type=jks
+server.ssl.key-alias=spring-https
 spring.jpa.show-sql=true
+
 spring.jpa.hibernate.ddl-auto=update
 spring.data.jpa.repositories.enabled=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
